--- a/styles/main.css
+++ b/styles/main.css
@@ -167,8 +167,8 @@ nav{
     justify-items: center;
     align-items: center;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    width: 190px;
-    height: 98px;
+    width: 11.875rem;
+    height: 6.125rem;
     padding-left: 20px;
     position: absolute;
     margin-left: -6.5625rem;
@@ -213,7 +213,7 @@ nav{
     /*Bannar responsive  */
     .bannar{
         flex-direction: column;
-        margin: 0rem 2rem;
+        margin: 0rem 0.2rem;
         
     }
     .bannar-btn{
@@ -222,6 +222,29 @@ nav{
     .circle i{
         margin: 0.8rem 1rem;
         display: block;
+    }
+    .bannar-container{
+        max-width: 352px;
+        margin-top: 50px;
+        
+    }
+    .bannar-pic{
+        margin-top: 50px;
+
+    }
+    .card1{
+        width: 160px;
+        height: 85px;
+        margin-left: 12.625rem;
+        margin-top: -33.125rem;
+  
+    }
+    .card2{
+        width: 160px;
+        height: 85px;
+        margin-left: -0.5625rem;
+        margin-top: -21rem;
+        
     }
 
 
