--- a/styles/main.css
+++ b/styles/main.css
@@ -309,10 +309,23 @@ nav{
     .change-habit-container{
         display: flex;
         flex-direction: column;
+        margin-top: 220px;
     }
     .change-habit-images{
         flex-direction: column;
+        gap: 1rem;
+        margin-top: 2rem;
+
     }
+    .card>img{
+        width: 60%;
+        border-radius: 50%; 
+           
+    }
+    .description{
+        margin: 10px;
+    }
+    
 
 
 }
