--- a/styles/main.css
+++ b/styles/main.css
@@ -248,7 +248,7 @@ nav{
     
 }
 .card>img{
-    width: 100%;
+    width: 50%;
     border-radius: 50%; 
        
 }
@@ -261,14 +261,14 @@ nav{
     margin-top: 3rem;
 }
 .run-extra{
-    max-width: 1060px;
+    max-width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 18px;
     background: rgb(34, 34, 34);
     margin: 0 auto;
-    /* padding: 10px 20px; */
+   
 }
 .run-extra-container{
     width: 443px;
@@ -287,6 +287,22 @@ nav{
     
 }
 /* BMI calculator */
+table{
+    border-collapse: collapse;
+    margin-top: 2rem;
+    
+
+}
+th {
+    border: 1px solid rgb(97, 96, 96);
+    padding: 1rem 2rem;
+}
+td{
+    border: 1px solid rgb(97, 96, 96);
+    padding: 1rem 2rem; 
+    color: rgba(255, 255, 255, 0.5);   
+}
+
 .bmi-heading{
     max-width: 50%;
     margin: 0 auto;
@@ -295,8 +311,40 @@ nav{
 .bmi-get-input{
     background-color: rgb(34, 34, 34);
     margin: 0 auto;
+    margin-top: 3rem;
+    padding-top: 3rem;
 }
-
+.bmi-calculator-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 2rem;
+}
+.bmi-chart{
+    width: 50%;
+}
+h4{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+       
+}
+.bmi-input{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem 2rem;
+    margin-bottom: 2rem;
+}
+input,select{
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 1rem 1.5rem;
+    color: rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+}
 /* Responsive Code */
 
 @media screen and (max-width:576px){
@@ -380,6 +428,7 @@ nav{
     
     .run-extra-img{
         width: 100%;
+        background-size: 150%;
     }
     .description{
         margin-bottom: 30px;
