--- a/styles/main.css
+++ b/styles/main.css
@@ -314,11 +314,13 @@ td{
     margin-top: 3rem;
     padding-top: 3rem;
 }
+    
 .bmi-calculator-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 2rem;
+    gap: 2rem;
 }
 .bmi-chart{
     width: 50%;
@@ -340,7 +342,7 @@ h4{
 }
 input,select{
     background-color: rgba(255, 255, 255, 0.1);
-    padding: 1rem 1.5rem;
+    padding: 1rem 1rem;
     color: rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 10px;
@@ -433,6 +435,22 @@ input,select{
     .description{
         margin-bottom: 30px;
     }
+    /* BMI section responsive */
+    .bmi-calculator-container{
+        flex-direction: column;
+    }
+    .bmi-chart{
+        width: 100%;
+    }
+    .bmi-imput-container{
+        width: 100%;
+        padding: 20px 30px;
+    }
+    input,select{
+        padding: 10px 5px;
+    }
+
+ 
 
 
 }
