--- a/styles/main.css
+++ b/styles/main.css
@@ -319,8 +319,9 @@ td{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 2rem;
+    margin: 0rem 2rem;
     gap: 2rem;
+    padding-bottom: 2rem;
 }
 .bmi-chart{
     width: 50%;
@@ -347,6 +348,51 @@ input,select{
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 10px;
 }
+/* Meet our Team section */
+.meet-team{
+    text-align: center;
+    margin: 3rem auto;
+}
+.team-card-container-section{
+    max-width: 1060px;
+    margin: 0 auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1rem 1rem;
+
+}
+.team-card-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+    
+}
+.team-card{
+    width: 100%;
+    height: 272px;   
+}
+.team-card>img{
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    position: relative;
+    
+    
+}
+.trainer-details{
+    position: absolute;
+    margin-top: -50px;
+    margin-left: 20px;
+
+}
+.trainer-details>p{
+    font-size: 0.7rem;
+
+}
+
+
+
+
 /* Responsive Code */
 
 @media screen and (max-width:576px){
@@ -449,6 +495,14 @@ input,select{
     input,select{
         padding: 10px 5px;
     }
+    /* Meet our team */
+    .team-card-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .team-card{
+        height: auto;   
+    }
+
 
  
 
