--- a/styles/main.css
+++ b/styles/main.css
@@ -423,8 +423,66 @@ input,select{
     text-align: left;
     
 }
-
-
+/* Footer section design */
+footer{
+    background: rgba(255, 255, 255, 0.1);
+    max-width: 1440px;
+    margin: 0 auto ;
+    
+}
+.footer-content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2rem;
+}
+.get-start-service>h6{
+    font-size: 2rem;
+}
+.get-start-fitness>h6{
+    font-size: 2rem;
+}
+.get-start-service>p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin: 0.5rem 0;
+    
+}
+.get-start-fitness>p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin: 0.5rem 0;    
+}
+.all-rights{
+    max-width: 1440px;
+    
+}
+.all-rights>p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.6rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+    
+}
+#footer-line{
+    margin: 0 2rem;
+    border:1px solid rgba(255, 255, 255, 0.1);
+}
 
 
 /* Responsive Code */
@@ -543,6 +601,14 @@ input,select{
     }
     .muscle{
         margin: 5px 0px;
+    }
+    /* Footer responsive part */
+    .footer-content{
+        grid-template-columns: repeat(1,1fr);
+        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem 2rem;
     }
 
 
